finish work in cv little problem with image

--- a/index.html
+++ b/index.html
@@ -7,8 +7,57 @@
   </head>
   <body>
     <header>
-
+      <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTxxQUUeaKzSw5mR2lh50uw6d3UhQDnGdshfsQQmJh_8MPSipttFg">
+      <h3>NOR MOHAMMAD</h3>
+      <h1> developer web site</h1>
+      <p>engineering looking for work in maintenance</p>
     </header>
+    <div>
+       <aside>
 
+
+          <p>information</p>
+      <ul>
+        <li>32 ans</li>
+        <li>61 rue general chanzy</li>
+        <li>62100 Calais</li>
+        <li>permis conduire</li>
+       </ul>
+       <p>competances</p>
+       <ul>
+         <li>motivation: excelents</li>
+         <li>Esprite d'èguipe</li>
+         <li>curiosites</li>
+         <li>HTML/CSS:dèbutant</li>
+       </ul>
+        <p>loisirs</p>
+        <ul>
+          <li>foot</li>
+          <li>randonèes</li>
+          <li>code</li>
+          <li>linux</li>
+        </ul>
+        </aside>
+
+    <section>
+           <h1>Experience</h1>
+            <h3>Titre de poste</h3>
+              <p>information :durèe lieu...</p>
+        <ul>
+           <li>Description de ce  que vous avez fait</li>
+        </ul>
+          <h3>Titre de poste</h3>
+            <p>information :durèe lieu ....</p>
+        <ul>
+           <li>Description de ce que vous avez fait </li>
+        </ul>
+            <h3>Titre de poste</h3>
+               <p>information :durèe lieu ...</p>
+         <ul>
+             <li>Description de ce que vous avez fait</li>
+         </ul>
+
+      </section>
+   </div>
   </body>
 </html>
